reduce space between go charts (bug on IE6)

--- a/memi/memi-spring-mvc/src/main/webapp/css/default.css
+++ b/memi/memi-spring-mvc/src/main/webapp/css/default.css
@@ -1324,7 +1324,7 @@ width:100%;
 #go-chart-process, #go-chart-molecular, #go-chart-cellular {
 float:left;
 border:0px solid green;
-margin-right:10px; /*reduced because of IE6*/
+margin-right:7px; /*reduced because of IE6*/
 }
 
 #samples_id {margin-bottom:0;}
